--- a/src/app/pages/carrusel/carrusel.page.html
+++ b/src/app/pages/carrusel/carrusel.page.html
@@ -1,4 +1,4 @@
-<app-page-header titulo="Carrusel"></app-page-header>
+<app-page-header titulo="Huella Dactilar"></app-page-header>
 
 <ion-content>
 
