--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-button routerLink="/videos" expand="block" fill="clear" shape="round">Vídeos</ion-button>
   <ion-button routerLink="/camara" expand="block" fill="clear" shape="round">Cámara</ion-button>
-  <ion-button routerLink="/carrusel" expand="block" fill="clear" shape="round">Carrusel</ion-button>
+  <ion-button routerLink="/carrusel" expand="block" fill="clear" shape="round">Huella Dactilar</ion-button>
   <ion-button routerLink="/geolocalizacion" expand="block" fill="clear" shape="round">Geolocalización</ion-button>
   <ion-button routerLink="/graficos" expand="block" fill="clear" shape="round">Gráficos</ion-button>
 </ion-content>
